[package]
name = "celtchar"
version = "0.1.0"
authors = ["Thomas Letan <contact@thomasletan.fr>"]

[dependencies]
toml = "0.5"
clap = "2.33"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"
zip = "0.5"
libceltchar = { version = "0.1",  path = "../lib" }
ogmarkup = { version = "0.1", git = "https://git.sr.ht/~lthms/ogmarkup" }